<resources>
    <string name="app_name">TalkOn</string>
    <string name="str_sign_in">Log in</string>
    <string name="str_skip">Skip</string>
    <string name="str_next">Next</string>
    <string name="str_country">Country</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_remember_me">Remember me</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="str_code_has_been_sent_to">Code has been sent to</string>
    <string name="str_verify">Verify</string>
    <string name="str_resend_code_in">Resend code in</string>
    <string name="str_seconds">seconds</string>
    <string name="str_please_choose_your_status">Please choose your status:</string>
    <string name="str_teacher">Teacher</string>
    <string name="str_student">Student</string>
    <string name="str_name">Name</string>
    <string name="str_experience">Experience</string>
    <string name="str_age">Age</string>
    <string name="str_level">Level</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_profile">Profile</string>
    <string name="str_settings">Settings</string>
    <string name="str_balance">Balance</string>
    <string name="str_take_money">Taking money</string>
    <string name="str_your_balance">Your Balance</string>
    <string name="str_support_center">Support Center</string>
    <string name="str_log_out">Log out</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_reservation">Reservation</string>
    <string name="str_rate_talk_on">Rate TalkOn</string>
    <string name="str_search">Search</string>
    <string name="str_online">Online</string>
    <string name="str_write_a_message">Write a message</string>
    <string name="str_time">12:55</string>
    <string name="text">Let`s speak natural British English, TESL, IELTS TOEFL English together ,
        Let`s speak natural British English together </string>
    <string name="str_accept">Accept</string>
    <string name="str_chat">Chat</string>
    <string name="str_don_t_have_an_account">Don\'t have an account?</string>
    <string name="str_or_continue_with">or continue with</string>
    <string name="str_practice_speaking_with_students">Practice speaking English with Students!</string>
    <string name="str_you_will_not_be_charged_any_coins">You will not be charged any coins!</string>
    <string name="str_search_partner">Search partner</string>
    <string name="for_the_most_part_teachers_are_undervalued_and_underappreciated_this_is_especially_sad_considering_the_tremendous_impact_that_teachers_have_on_a_daily_basis">For the most part, teachers are undervalued and underappreciated. This is especially sad considering the tremendous impact that teachers have on a daily basis.</string>

    <string name="str_talk_online">Talk Online</string>
    <string name="str_professional_tutors">Professional Tutors!</string>
    <string name="str_flexible_lessons">Flexible lessons!</string>
    <string name="str_practice_with_student">Practice with students!</string>
    <string name="str_record_your_lessons">Record your lessons!</string>
    <string name="str_edit_profile">Edit</string>
    <string name="str_save">Save</string>

    <string name="str_talk_online_text">TalkOn gives you instant access to English speakers over live video chat!</string>
    <string name="str_professional_tutors_text">Speak English Fluently! Improve your speaking with professional tutors!</string>
    <string name="str_flexible_lessons_text">Personal lesson plans, schedule lessons anytime of the day! Speak English anytime, anywhere!</string>
    <string name="str_practice_with_student_text">Practice your english with students. TalkOn is a great way to practice English for beginners or experts. Give it a try!</string>
    <string name="str_record_your_lessons_text">Imitate tutors, learn new words and analyze your english by recording your lessons!</string>
    <string name="str_lesson_history">Lesson history</string>
    <string name="str_rate_app">Rate app</string>
    <string name="str_search_for_tutors">Search for tutors</string>
    <string name="str_collapse">Collapse</string>
    <string name="str_more">More</string>
    <string name="str_your_local_time_zone">Your local time zone</string>
    <string name="str_buy_trial">Buy trial</string>
    <string name="str_about_teacher">About teacher</string>
    <string name="str_start_lesson">Start lesson</string>
    <string name="str_per_lesson">per lesson</string>


    <string name="str_started_hour">12:30</string>
    <string name="str_finished_hour">12:50</string>
    <string name="str_minus">-</string>
    <string name="str_calendar">12/05/22</string>
    <string name="str_buy_coins">Buy coins</string>
    <string name="str_plus_coins">Plus coins</string>
    <string name="str_minus_coins">Minus coins</string>
    <string name="str_teacher_balance">My balance:</string>
    <string name="str_get_coins_speak_more">Get more coins, speak more!</string>


    <string name="str_about_yourself">About yourself</string>
    <string name="str_nationality">Nationality</string>
    <string name="str_tap_here_to_upload_video">Tap here to upload video</string>
    <string name="str_brief_information_about_yourself">Brief information about yourself</string>
    <string name="str_finish">Finish</string>
    <string name="str_tap_to_upload">Tap to upload</string>
    <string name="str_partner_found">Partner Found!</string>
    <string name="str_mamnuna">Mamnuna</string>
    <string name="str_advanced">Advanced</string>
    <string name="str_exit">Exit</string>
    <string name="str_oops_partner_not_found">Oops! Partner not found!</string>
    <string name="str_please_try_later">Please try later</string>
    <string name="str_try_again">Try again</string>
    <string name="str_yes">Yes</string>
    <string name="str_search_a_country">Search a country</string>

</resources>