<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_search_partner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:padding="15dp"
                android:text="@string/str_practice_speaking_with_students"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_students" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_search_partner"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded_full_green"
                android:backgroundTint="@null"
                android:text="@string/str_search_partner"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/str_you_will_not_be_charged_any_coins"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_call"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_partner_found"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:gravity="center_horizontal|bottom"
                android:text="@string/str_partner_found"
                android:textColor="@color/main_green"
                android:textSize="25sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_picture_partner_found"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/img"
                app:civ_border_color="@color/main_green"
                app:civ_border_width="4dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="right">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_country_flag"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="6dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            app:shapeAppearanceOverlay="@style/circle" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_fullname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.6"
                        android:text="Jeniffer Aniston"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="right">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_level"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="6dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@color/gold"
                            app:shapeAppearanceOverlay="@style/circle" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_level"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.6"
                        android:text="Advanced"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <Button
                        android:id="@+id/btn_accept"
                        android:layout_width="110dp"
                        android:layout_height="37dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_round_full_green"
                        android:backgroundTint="@null"
                        android:text="@string/str_accept" />

                    <Button
                        android:id="@+id/bt_skip"
                        android:layout_width="110dp"
                        android:layout_height="37dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_round_grey"
                        android:backgroundTint="@null"
                        android:text="@string/str_skip"
                        android:textColor="@color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_exit_search_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@null"
                    android:text="@string/str_exit"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>